<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="ENDPOINT">http://188.226.150.65</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="apartment_pic">Apartment cover_photo</string>
    <string name="look_here">Look here?</string>
    <string name="are_you_sure_map">Are you sure you want to look here?</string>
    <string name="background_image">Background image</string>
    <string name="distance">distance</string>
    <string name="unknown">unknown</string>

    <!-- menu actions -->
    <string name="action_settings">Settings</string>
    <string name="action_bookmark">Bookmark</string>

    <!-- fragment names -->
    <string name="app_name">ZimmerFrei</string>
    <string name="title_home">Home</string>
    <string name="title_section_map">Near me (map)</string>
    <string name="title_section_list">Near me (list)</string>
    <string name="title_section_my_places">My places</string>
    <string name="title_section_profile">Profile</string>
    <string name="title_section_help">Help</string>
    <string name="title_section_about">About</string>
    <string name="title_apartment_details">Apartment details</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="near_me">Near me</string>
    <string name="best_offers">Best offers</string>
    <string name="splash_screen">Splash screen</string>

    <!-- register & login -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="no_user_pass">Enter username and password</string>
    <string name="wrong_user_pass">Wrong username or password</string>
    <string name="register">Register</string>
    <string name="login_or_register">Please login or register</string>
    <string name="registration_problem">Registration error, please try again</string>
    <string name="logout">Log out</string>
    <string name="login">Sign in</string>
    <string name="create_account">Create account</string>
    <string name="registration">Register an account</string>
    <string name="login_with_account">Sign in</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">E-mail</string>
    <string name="phone">Phone</string>

    <!-- profile -->
    <string name="user_profile_image">Users profile image</string>
    <string name="are_you_sure_logout">Are you sure you want to log out?</string>
    <string name="save_to_favorites">Save</string>
    <string name="remove_bookmark">Remove</string>
    <string name="user_type">Traveler</string>
    <string name="sign_out">Sign out</string>
    <string name="saved_myplaces">Saved to MyPlaces</string>
    <string name="removed_myplaces">Removed from MyPlaces</string>

    <!-- errors -->
    <string name="connection_fail">Connection failed</string>
    <string name="no_play_services">No play services available</string>
    <string name="could_not_connect">Can\'t connect to GPS</string>
    <string name="location_error">GPS location not found</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="unauthorized_please">Unauthorized ! Please log in</string>
    <string name="no_favorites">No apartments favored</string>

</resources>
