<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_background"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/home2"
        android:scaleType="centerCrop"
        android:contentDescription="@string/background_image" />

    <EditText
        android:id="@+id/editUsername"
        android:hint="@string/username"
        android:layout_width="wrap_content"
        android:background="@drawable/edit_text_design"
        android:layout_height="35dp"
        style="@style/RegistrationInput"
        android:layout_below="@+id/textTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp" />

    <EditText
        android:id="@+id/editPassword"
        android:hint="@string/password"
        android:layout_width="wrap_content"
        android:background="@drawable/edit_text_design"
        android:layout_height="35dp"
        android:inputType="textPassword"
        style="@style/RegistrationInput"
        android:layout_below="@+id/editUsername"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/editEmail"
        android:hint="@string/email"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:background="@drawable/edit_text_design"
        android:inputType="textEmailAddress"
        style="@style/RegistrationInput"
        android:layout_below="@+id/editPassword"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_blue"
        android:text="@string/create_account"
        android:layout_below="@+id/editEmail"
        android:layout_alignEnd="@+id/editEmail"
        android:layout_alignRight="@+id/editEmail"
        android:layout_alignStart="@+id/editEmail"
        android:layout_alignLeft="@+id/editEmail"/>

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/registration"
        android:layout_marginTop="20dp"
        android:textColor="@color/frei_grey"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>