<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_background"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/home2"
        android:scaleType="centerCrop"
        android:contentDescription="@string/background_image" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        style="@style/RegistrationInput"
        android:background="@drawable/edit_text_design"
        android:hint="@string/username"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="147dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:inputType="textPassword"
        style="@style/RegistrationInput"
        android:background="@drawable/edit_text_design"
        android:hint="@string/password"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_blue"
        android:layout_below="@+id/password"
        android:layout_alignStart="@+id/password"
        android:layout_marginTop="38dp"
        android:layout_alignEnd="@+id/password" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/login_with_account"
        android:layout_marginTop="20dp"
        android:textColor="@color/frei_grey"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>