<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#ffffffff">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:scaleType="centerCrop"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="15dp"
            android:contentDescription="@string/user_profile_image" />

        <TextView
            android:id="@+id/profile_name_lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingTop="15dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:minEms="8"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/profile_image"
            android:layout_toRightOf="@+id/profile_image"
            android:layout_marginLeft="20dp" />

        <TextView
            android:id="@+id/user_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_type"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="#c8ced4"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:layout_below="@+id/profile_name_lastname"
            android:layout_alignEnd="@+id/profile_logout"
            android:layout_alignRight="@+id/profile_logout"
            android:layout_alignStart="@+id/profile_name_lastname"
            android:layout_alignLeft="@+id/profile_name_lastname"/>
        <Button
            android:id="@+id/profile_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/light_blue"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@drawable/button_profile"
            android:text="@string/logout"
            android:layout_alignStart="@+id/profile_name_lastname"
            android:layout_alignLeft="@+id/profile_name_lastname"
            android:layout_alignEnd="@+id/profile_name_lastname"
            android:layout_alignRight="@+id/profile_name_lastname"
            android:layout_below="@+id/user_type"
            android:layout_toEndOf="@+id/profile_image"
            android:layout_toRightOf="@+id/profile_image"
            android:layout_marginTop="10dp" />

    </RelativeLayout>



